Added SPI driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(m17netd_src
 	src/m17tx_thread.cpp
 	src/m17tx.cpp
 	src/config.cpp
+	src/spi.cpp
 )
 
 find_package(tomlplusplus CONFIG REQUIRED)
