--- a/example.toml
+++ b/example.toml
@@ -8,6 +8,11 @@ name="m17d"
 ip="172.16.0.1"
 MTU=822
 
+[radio]
+tx_frequency=433475000
+rx_frequency=433475000
+k_mod=0.2
+
 [[peers]]
 callsign="ON4MOD-2"
 ip="172.16.0.8"
