--- a/example.toml
+++ b/example.toml
@@ -11,8 +11,8 @@ MTU=822
 [radio]
 tx_frequency=433475000
 rx_frequency=433475000
-k_mod=0.2
-ppm=-20
+k_mod=3.75
+ppm=-21
 
 [[peers]]
 callsign="ON4MOD-2"
@@ -23,3 +23,8 @@ routes=["172.16.0.8/29"]
 callsign="ON4MOD-3"
 ip="172.16.0.16"
 routes=["172.16.0.16/29"]
+
+[sdrnode]
+spi_dev="/dev/spidev1.0"
+i2s_rx = "default:GDisDACout"
+i2s_tx = "default:GDisDACout"
