--- a/example-1.toml
+++ b/example-1.toml
@@ -11,6 +11,7 @@ ip="172.16.0.1"
 MTU=822
 
 [radio]
+device = "sdrnode"
 tx_frequency=433475000
 rx_frequency=433475000
 k_mod=0.0375
@@ -30,3 +31,6 @@ routes=["172.16.0.16/29"]
 spi_dev="/dev/spidev1.0"
 i2s_rx = "default:GDisDACout"
 i2s_tx = "default:GDisDACout"
+lna_gain = -48
+mix_gain = 3
+
