--- a/example-1.toml
+++ b/example-1.toml
@@ -31,6 +31,7 @@ routes=["172.16.0.16/29"]
 spi_dev="/dev/spidev1.0"
 i2s_rx = "default:GDisDACout"
 i2s_tx = "default:GDisDACout"
+# LNA Gain = {0, -6, -12, -24, -36, -48}
 lna_gain = -12
+# Mix gain = [0, 15] each step increasing the TX gain by 2 db
 mix_gain = 13
-
