Added BERT RX capabilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,9 @@ add_executable(M17Netd ${m17netd_src} ${common_src})
 add_executable(test_tone EXCLUDE_FROM_ALL src/test_tone.cpp src/sx1255.cpp src/spi.cpp)
 add_executable(test_demod EXCLUDE_FROM_ALL src/test_demod.cpp src/M17Demodulator.cpp src/m17rx.cpp)
 add_executable(test_acq EXCLUDE_FROM_ALL src/test_acq.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp)
+add_executable(test_bert_rx EXCLUDE_FROM_ALL src/test_bert_rx.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp src/M17Demodulator.cpp src/m17rx.cpp)
 add_executable(test_bert_tx EXCLUDE_FROM_ALL src/test_bert_tx.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp src/m17tx.cpp)
-add_dependencies(tests test_tone test_demod test_acq test_bert_tx)
+add_dependencies(tests test_tone test_demod test_acq test_bert_rx test_bert_tx)
 
 # Include directories
 target_include_directories(M17Netd PUBLIC
@@ -74,6 +75,9 @@ target_include_directories(test_tone PUBLIC
 				${PROJECT_SOURCE_DIR}/inc)
 
 target_include_directories(test_acq PUBLIC
+				${PROJECT_SOURCE_DIR}/inc)
+
+target_include_directories(test_bert_rx PUBLIC
 				${PROJECT_SOURCE_DIR}/inc)
 
 target_include_directories(test_bert_tx PUBLIC
@@ -103,6 +107,12 @@ target_link_libraries(test_acq PUBLIC
 				${ALSA_LIBRARIES}
 				)
 
+target_link_libraries(test_bert_rx PUBLIC
+				m17-static
+				${liquid_LIB}
+				${ALSA_LIBRARIES}
+)
+
 target_link_libraries(test_bert_tx PUBLIC
 				m17-static
 				${liquid_LIB}
@@ -131,6 +141,16 @@ $<$<CONFIG:Release>:
 )
 
 target_compile_options(test_demod PRIVATE
+-Wall
+$<$<CONFIG:Debug>:
+	-g
+>
+$<$<CONFIG:Release>:
+	-O2
+>
+)
+
+target_compile_options(test_bert_rx PRIVATE
 -Wall
 $<$<CONFIG:Debug>:
 	-g
