--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,10 +57,11 @@ add_executable(M17Netd ${m17netd_src} ${common_src})
 add_executable(test_tone EXCLUDE_FROM_ALL src/test_tone.cpp src/sx1255.cpp src/spi.cpp)
 add_executable(test_demod EXCLUDE_FROM_ALL src/test_demod.cpp src/M17Demodulator.cpp src/m17rx.cpp)
 add_executable(test_acq EXCLUDE_FROM_ALL src/test_acq.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp)
+add_executable(test_filter EXCLUDE_FROM_ALL src/test_filter.cpp)
 add_executable(test_bert_rx EXCLUDE_FROM_ALL src/test_bert_rx.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp src/M17Demodulator.cpp src/m17rx.cpp)
 add_executable(test_bert_tx EXCLUDE_FROM_ALL src/test_bert_tx.cpp src/sdrnode.cpp src/sx1255.cpp src/spi.cpp src/m17tx.cpp)
 add_executable(test_bert_encode_decode EXCLUDE_FROM_ALL src/test_bert_encode_decode.cpp)
-add_dependencies(tests test_tone test_demod test_acq test_bert_rx test_bert_tx test_bert_encode_decode)
+add_dependencies(tests test_tone test_demod test_acq test_filter test_bert_rx test_bert_tx test_bert_encode_decode)
 
 # Include directories
 target_include_directories(M17Netd PUBLIC
@@ -76,6 +77,9 @@ target_include_directories(test_tone PUBLIC
 				${PROJECT_SOURCE_DIR}/inc)
 
 target_include_directories(test_acq PUBLIC
+				${PROJECT_SOURCE_DIR}/inc)
+
+target_include_directories(test_filter PUBLIC
 				${PROJECT_SOURCE_DIR}/inc)
 
 target_include_directories(test_bert_rx PUBLIC
@@ -109,6 +113,10 @@ target_link_libraries(test_tone PUBLIC
 
 target_link_libraries(test_acq PUBLIC
 				${ALSA_LIBRARIES}
+				)
+
+target_link_libraries(test_filter PUBLIC
+				${liquid_LIB}
 				)
 
 target_link_libraries(test_bert_rx PUBLIC
@@ -179,6 +187,16 @@ $<$<CONFIG:Release>:
 )
 
 target_compile_options(test_bert_encode_decode PRIVATE
+-Wall
+$<$<CONFIG:Debug>:
+	-g
+>
+$<$<CONFIG:Release>:
+	-O2
+>
+)
+
+target_compile_options(test_filter PRIVATE
 -Wall
 $<$<CONFIG:Debug>:
 	-g
